force-app/main/default/objects/TLG_TaskFeed__c/TLG_TaskFeed__c.object-meta.xml
<CustomObject>
    <label>TaskFeed</label>
    <nameField>
        <displayFormat>TF-{0000}</displayFormat>
        <label>TaskFeed Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TaskFeeds</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>