force-app/main/default/objects/TLG_TaskFeed__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>TaskFeeds</relationshipLabel>
    <relationshipName>TaskFeeds</relationshipName>
    <type>Lookup</type>
</CustomField>