force-app/main/default/objects/TLG_TaskFeed__c/fields/TLG_Contributor__c.field-meta.xml
<CustomField>
    <fullName>TLG_Contributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contributor</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>TaskFeeds</relationshipLabel>
    <relationshipName>TaskFeeds</relationshipName>
    <type>Lookup</type>
</CustomField>