force-app/main/default/objects/TLG_TaskFeed__c/fields/TLG_Date_Record__c.field-meta.xml
<CustomField>
    <fullName>TLG_Date_Record__c</fullName>
    <label>Date Record</label>
    <type>Date</type>
</CustomField>