force-app/main/default/objects/TLG_TaskFeed__c/fields/TLG_Roll__c.field-meta.xml
<CustomField>
    <fullName>TLG_Roll__c</fullName>
    <label>Roll</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>Pre-Sales Consultant</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>