force-app/main/default/objects/TLG_TaskFeed__c/fields/TLG_Section__c.field-meta.xml
<CustomField>
    <fullName>TLG_Section__c</fullName>
    <label>Section</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbox</fullName>
            </value>
            <value>
                <fullName>Today</fullName>
            </value>
            <value>
                <fullName>Upcoming</fullName>
            </value>
            <value>
                <fullName>Later</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>