force-app/main/default/objects/TLG_TaskFeed__c/fields/TLG_Time_Spent__c.field-meta.xml
<CustomField>
    <fullName>TLG_Time_Spent__c</fullName>
    <label>Time Spent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>