force-app/main/default/objects/TLG_TaskFeed__c/recordTypes/TLG_Contributors.recordType-meta.xml
<RecordType>
    <fullName>TLG_Contributors</fullName>
    <active>true</active>
    <label>Contributors</label>
</RecordType>